--- a/src/app/component/products/products.component.html
+++ b/src/app/component/products/products.component.html
@@ -12,14 +12,14 @@
 </div>
 <div class="container">
     <div class="row">
-        <ng-container *ngFor="let item of productList">
+        <ng-container *ngFor="let item of productList | filter: searchkey: 'title'">
             <div class="card col-md-3">
                 <img src="{{item.image}}" alt="">
                 <h5 style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width:100ch;">{{item.title}}</h5>
-                <p style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width:100ch;">{{item.description}}</p> 
+                <p style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; max-width:100ch;">{{item.description}}</p>
                 <p><strong>Price:</strong>${{item.price}}</p>
                 <button class="btn btn-primary" (click)=addtocart(item)>Add to cart</button>
             </div>
-        </ng-container>      
+        </ng-container>
     </div>
 </div>
